--- a/dev/pubspec.yaml
+++ b/dev/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cloud_firestore: ^3.1.6
   firebase_core: ^1.11.0
   google_sign_in: ^5.0.0
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
