--- a/dev/pubspec.yaml
+++ b/dev/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   firebase_core: ^1.11.0
   google_sign_in: ^5.0.0
   carousel_slider: ^4.0.0
+  razorpay_flutter: 1.1.0
+  neumorphic: ^0.4.0
 
 dev_dependencies:
   flutter_test:
